--- a/Chronicles/src/styles.scss
+++ b/Chronicles/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  // margin: 0; /* Reset default margin */
+  // padding: 0; /* Reset default padding */
+  background: linear-gradient(to right, #e9dfdd, rgb(253 13 13 / 24%));
+}
